# spdx-checker

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMMIT_RECORD.md  LICENSE  MAINTENANCE.md  Makefile  README.md  README_VALIDATION_REPORT.md  demo.py  pyproject.toml  setup.py  tox.ini
.claude/plan/: README纠正方案设计.md  README验证分析报告.md  最佳实践项目结构设计.md  目录结构问题诊断报告.md  自动验证工具实现.md  项目改进建议与最佳实践指南.md  项目架构分析报告.md  项目清理任务.md  项目研究规整计划.md  项目结构重组报告.md
.config/ci/: Makefile
.config/dev/: requirements-dev.txt  requirements.txt
.cursor/rules/: riper5_rules.mdc
.github/workflows/: ci.yml
.spec-workflow/approvals/spdx-scanner/: approval_1761222877566_22wsjiqhk.json  approval_1761222881508_605ezrje5.json  approval_1761222886085_zzijjl74m.json
.spec-workflow/approvals/spdx-scanner/.snapshots/design.md/: metadata.json  snapshot-001.json
.spec-workflow/approvals/spdx-scanner/.snapshots/requirements.md/: metadata.json  snapshot-001.json
.spec-workflow/approvals/spdx-scanner/.snapshots/tasks.md/: metadata.json  snapshot-001.json
.spec-workflow/specs/spdx-scanner/: design.md  requirements.md  tasks.md
docs/: usage.md
docs/reports/: BUILD_VALIDATION.md  EXAMPLES_VERIFICATION.md  PRODUCTION_DEPLOYMENT.md  README_VALIDATION.md  RELEASE_PREPARATION.md  VERIFICATION_REPORT.md
docs/specs/: EXTENSIONS_CONFIG.md
examples/: Makefile  README.md  example.c  example.js  example.py  spdx-scanner.config.json
scripts/test/: test_coverage.py  test_examples.py  test_extensions_config.py
scripts/validation/: simple_validation_test.py  test_validation.py  validation_example.py  validation_summary.py  validation_test.py
src/spdx_scanner/: CLAUDE.md  __init__.py  __main__.py  cli.py  config.py  corrector.py  git_integration.py  models.py  parser.py  pathspec.py  reporter.py  scanner.py  toml.py  validator.py
test_project/go/: example_with_spdx.go
test_project/js/: example_with_spdx.js  example_without_spdx.js
test_project/python/: example_with_spdx.py  example_without_spdx.py
tests/: __init__.py  test_config.py  test_corrector.py  test_git_integration.py  test_integration.py  test_models.py  test_parser.py  test_reporter.py  test_scanner.py  test_validator.py
tests/integration/: integration_test.py
tools/: quality_manager.py
tools/analysis/: code_quality.py
tools/migration/: refactor.py
tools/verification/: README.md  auto_corrector.py  automated_verifier.py  config.yaml  integration_tester.py  quality_checker.py  report_generator.py  spdx_validator.py
